# EmployeeTimeTracker

./: .gitignore  CMakeLists.txt  EmployeeTimeTracker.pro  README.md  run_update_translations.bat
app/: app.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
core/: appsettings.cpp  appsettings.h  core.pro  employee.cpp  employee.h  hourscalculator.cpp  hourscalculator.h
db/: db.pro  dbmanager.cpp  dbmanager.h  employeedataaccessobject.cpp  employeedataaccessobject.h  workrecorddataaccessobject.cpp  workrecorddataaccessobject.h
translations/: README_translation.md  Translations.qrc  translations.pro  translator.cpp  translator.h
translations/i18n/: ar.ts  en.ts
ui/: addemployeepage.cpp  addemployeepage.h  addemployeepage.ui  employeepage.cpp  employeepage.h  employeepage.ui  importexportpage.cpp  importexportpage.h  importexportpage.ui  preferencespage.cpp  preferencespage.h  preferencespage.ui  ui.pro
